# pink

./: .hgignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CeCill_header.txt  CheckIncludeFile.cxx.in  DONE  FAQ  FindCFITSIO.cmake  Jamroot  Makefile  TODO  UJ_CheckIncludeFile.c.in  UJ_CheckIncludeFile.cmake  UJ_CheckIncludeFileCXX.cmake  UJ_GenerateRPM.cmake  cmake_install.cmake  cygwin.make  dependencies  general.make  li.make  li64.make  log  makefile  mgw.make  pink.dox  pink.spec  platform_specific.h.in  python_documenter.py  python_documenter.py.candidate~  python_test_generator.py  python_test_generator.py~  readme  setup.py  start.bash  user-config.jam
data/configs/: build_release_python27-win32.bat  build_release_python33-win32.bat  build_release_python33-win64.bat  pink_build_windows_python27.bat  pink_config_android_release.txt  pink_config_pink_anyuws_debug.txt  (+7 more)
doc/: aide.txt  formats.txt  pink.dox  pinkdoc.html  vtk.help
include/: #lseuil.h#  BilateralFilter.h  BilateralFilter.hpp  Call_RORPO.hpp  FIFO.hpp  Get_RPO_Orientations.hpp  Image.hpp  NonLocalFilter.h  NonLocalFilter.hpp  NonLocalFilter.h~  NonLocalFilterSioux.h  PO.hpp  Path_Opening.hpp  Path_Opening_Anisotrope.hpp  RORPO.hpp  RORPO_multiscale.hpp  RPO.hpp  RPO_Anisotrope.hpp  RPO_dilat3D.hpp  RPO_dilat_constraint.hpp  RPO_maj_float.hpp  RPO_new_orientations.hpp  RPO_parallel.h  Union_RPO_dilat3D.hpp  Union_RPO_dilat_constraint.hpp  avscrop.h  avsimage.h  bdd.h  d2  darray.h  fseries.h  fseries.hpp  glinemm3d.hpp  imclient.h  jccodimage.h  jccomptree.h  jcgraphes.h  jcimage.h  jclabelextrema.h  jclderiche.h  (+289 more)
include_redundant/: lskelpar3d.h  lskelpar3d_others.h
lib/: Makefile  cmake_install.cmake
masks/: ball3.pgm  ball4.pgm  carre100.pgm  carre5.pgm  carre50.pgm  cercle12.pgm  dir0_3x3.pgm  dir1_3x3.pgm  dir2_3x3.pgm  disque100.pgm  disque150.pgm  voisb
patches/: 2014-01-13_michel.patch
pink/: l2dcollapse.h  l2dkhalimsky.h  l3dkhalimsky.h  larith.h  lcrop.h  lderiche.h  ldilateros3d.h  ldist.h  ldraw.h  lhtkern3d.h  liarwrap.h  lmeshwarp.h  lminmax.hpp  lopening.h  lrotations.h  lskeletons.h  lstat.h  lsurimp.h  lwshedtopo.h  lzoom.h  mcchrono.h  mcfah.h  mcfahpure.h  mcfahsalembier.h  mcfifo.h  mcgeo.h  mcimage.h  mcindic.h  mckhalimsky2d.h  mckhalimsky3d.h  mclifo.h  mclin.h  mcpolygons.h  mcrbt.h  mcrlifo.h  mcskel2d.h  mcskel3d.h  mcsplines.h  mctopo.h  mctopo3d_table.h  (+21 more)
scripts/: GraphClose.sh  ajoutecadre  blacktophat  bouchecavites  bouchetrous  bouchettrous  centrecolor  close  closeballlab  closeballnum  closebin  closebin3d  closerec  closerecball  col2gray  combine  constrainedconnectivity.sh  cropgif  cropppm  cut  ebarbe  ebarbe3d  elimcompbord  flowskel1  flowskel2  gradmorph  hmaxima  hminima  hminimar  holeclosing_area  homotopicreconstruction  inftophat  invariants  invariants2d  mesh2pgm  moyendir  ogniewicz1  open  openballrec  openbin  (+24 more)
src/com/: 0000.c  2dborder.c  2dcollapse.c  2dcolor.c  2dflowskeleton.c  2dflowskeleton.c.foret  2dinvariants.c  2dkhalimskize.c  2dlabel.c  2dmakecomplex.c  2dpardircollapse.c  2dseltopo.c  2dthin.c  2dtopoflow.c  2elisp.c  2latex.c  3dalpha.c  3dbeta.c  3dborder.c  3dcollapse.c  3dcolor.c  3dflowskeleton.c  3dinvariants.c  3disthmus.c  3dkhalimskize.c  3dlabel.c  3dmakecomplex.c  3dmakepolygons.c  3dpardircollapse.c  3dplane.c  3drecons.c  3dseltopo.c  3dskelck.c  3dskelsurf.c  3dsphere.c  3dsurfacecollapse.c  3dthin.c  CMakeLists.txt  CMakeLists.txt~  GA2khalimsky.c  (+571 more)
src/lib/: BuildLUTRemyThiel.cpp  CMakeLists.txt  CMakeLists.txt~  DirectionalSkeletonizer.cpp  DirectionalSkeletonizer.cxx  avscrop.c  avsimage.c  bimage.c  bimage_utils.c  clean.sh  clean.sh~  fmmgeodesic.c  fmmgeodist.c  jccodimage.c  jccomptree.c  jcgraphes.c  jcimage.c  jclabelextrema.c  l2dcollapse.c  l2dkhalimsky.c  l3dcollapse.c  l3dkhalimsky.c  lMSF.c  larith.c  lasft.c  lattrib.c  lattrib.h  lattribarea.c  lattribheight.c  lattribute.c  lattribvol.c  lballincl.c  lbarycentre.c  lbdigitalline.cxx  lblob.c  lborder.c  lbresen.c  lccv.c  lclick.c  lcomphisto.c  (+258 more)
src/lib/development/: uiCircle.cpp  uiCutPlane.cpp  uiFlow.cpp  uiGradient.cpp  uiUngerFlow.cpp  ui_fit_circle.cpp
src/lib/linux/: lclick.c  lclick.c.sav1  mcxbib.c
src/python/: CMakeLists.txt  py3dplane.cpp  pyarithmetic.cpp  pyasfbin.cpp  pyasfbin.hpp  pyborder.cpp  pyclosing.cpp  pyclosing.hpp  pycomplex.cpp  pyconnect.cpp  pyconversion.cpp  pyconvert.cpp  pycutplane.cpp  pydevel.cpp  pydilat.cpp  pydilatball.cpp  pydistc.cpp  pydraw.cpp  pyeros.cpp  pyerosball.cpp  pyexport.cpp  pyexport.hpp  pyfft.cpp  pyfloat2byte.cpp  pyflow.cpp  pyfmm.cpp  pygeodilat.cpp  pygeoeros.cpp  pygeom.cpp  pygradient.cpp  pygradmorph.cpp  pygraph.cpp  pygraph.cpp~  pyhello.cpp  pyhisto.cpp  pyhtkern.cpp  pyidentifyline.cpp  pyimage_types.cpp  pyinsert.cpp  pyinverse.cpp  (+59 more)
src/python/development/: pycutplane.cpp  pygradient.cpp  pymaxflow.cpp
swig/: CMakeLists.txt  imview.i  pink.sh  pinkswig.i
swig/com/: imview.c  imview.h  pinkswig.c  pinkswig.h
tcl/: 2dflowskeleton.tcl  2dsegment.tcl  2dview  3dsegment.tcl  3dview  3dview.tcl  3dview.v0.tcl  3dview.v1.tcl  3dview2  3dview_tcl.c  Dialog.tcl  areaclosing.tcl  areaopen.tcl  areaopening.tcl  axone1.tcl  axone2.tcl  axones.tcl  axones_main.tcl  circlefit.tcl  closeball.tcl  closeball_tcl.c  closerecball.tcl  convertlist.tcl  curvextract.tcl  decimate.tcl  del_bronches.tcl  dilatball.tcl  dilatball_tcl.c  dir_exec  dir_reformat  dirdetect  dirthick2  dirthin  dirthin2  dubuisson  edit3d.tcl  ekta1  ekta1.bat  ekta10  ekta11  (+107 more)
tools/: filefilter  modfiles6  pinktypes.h
tutorial/: README  generate_package.py
usermanual/: 00README.tex  00_TODO.txt  00_introduction.aux  00_introduction.tex  01_tutorial.aux  01_tutorial.tex  02_numpy.tex  A00_installing.aux  A00_installing.tex  A01_function_reference.aux  dedicace.aux  dedicace.tex  latex.py  licence.aux  licence.tex  pink_user_manual.aux  pink_user_manual.lof  pink_user_manual.out  pink_user_manual.py  pink_user_manual.tex  pink_user_manual.toc  titlepage.aux  titlepage.tex  tutorial.tex
(+578 files in other folders)
